# tensorrtx

./: README.md
arcface-r100-glink360/: CMakeLists.txt  arcface-r100-glink.cpp  gen_wts.py
nanodet/: CMakeLists.txt  decode.cu  decode.h  nanodet.cpp  nanodet.cpp_bk  nanodet.cpp_bk2  nanodet.cpp_bk3  shufflenetv2_onnx.py
paddle_stnet_trt/: paddle_weigths_extractor.py  stnet_pd2trt.cpp  stnet_pd2trt_int8.cpp  trt_stnet.cpp
trt_pose/: .fuse_hidden000007d600000001  .fuse_hidden00001fa700000012  .fuse_hidden0003650200000055  .fuse_hidden000365c300000057  CMakeLists.txt  cover_table.h  pair_graph.h  post_process.h  trt_pose.cpp
yolov5-face/: .fuse_hidden0006a06f000000b7  CMakeLists.txt  yolov5_face.cpp  yolov5_face_plugin.cu  yolov5_face_plugin.h
yolov5n-v6-prune/: CMakeLists.txt  best.pt  prune_gen_wts.py  yolov5n_v6_prune.cpp  yolov5n_v6_prune_paddle.cpp  yolov5n_v6_prune_plugin.cu  yolov5n_v6_prune_plugin.h
